--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>MY PORTFOLIO</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -91,12 +91,12 @@
         <section id="skills" class="skills">
             <div class="container">
                 <h1 class="section-heading"><span>My Skills</span> </h1>
-                <p>Have a look at what i have learnt so far...</p>
+                <p>Have a look at what I have learnt so far...</p>
                 <div class="card-wrapper">
                     <div class="card">
                         <img src="./images/cppl.png" alt="">
                         <h2>CPP</h2>
-                        <p>In c++ i have learnt OOPs,Standard Template Library, and other data structures concepts like arrays, stacks, queue, linked list, tree etc...</p>
+                        <p>In c++ I have learnt OOPs,Standard Template Library, and other data structures concepts like arrays, stacks, queue, linked list, tree etc...</p>
     
                     </div>
                     <div class="card">
@@ -127,7 +127,7 @@
         <section id="projects" class="review">
             <div class="container">
                 <h1 class="section-heading"><span>My</span> Projects</h1>
-                <p>Here are few of my projects that i have worked on recently and individually. Have a look.</p>
+                <p>Here are few of my projects that I have worked on recently and individually. Have a look.</p>
                 <div class="slider">
                     <div class="slide">
                         <h1>Portfolio Website</h1>
